<resources>
    <string name="app_name">MIFARE App</string>
    <string name="menu_settings">Configuración</string>
    <string name="warning_nfc_is_off">¡NFC está actualmente desactivado!</string>
    <string name="turn_on_nfc">La aplicación no puede correr si NFC está deshabilitado. Por favor
activar NFC en Settings y luego utilice el botón back para regresar a esta app.</string>
    <string name="instrucciones"> Acercar un tag MIFARE al dispositivo Android para leer su UID y su
tipo.</string>
    <string name="escribirATag_label">Escribir a tag:</string>
    <string name="tag_UID">" UID del Tag: "</string>
    <string name="temperaturaMinima_label">"Temperatura mínima: "</string>
    <string name="temperaturaMaxima_label">"Temperatura máxima: "</string>
    <string name="humedadMinima_label">"Humedad del ambiente mínima: "</string>
    <string name="humedadMaxima_label">"Humedad del ambiente máxima: "</string>
    <string name="humedadTierraMinima_label">"Humedad de tierra mínima: "</string>
    <string name="escribir_label">"Escribir a tag"</string>
    <string name="humedad_UID">" UID del Tag: "</string>
    <string name="card_type">" Tipo de Tarjeta: "</string>
    <string name="autenticate_label"> AUTENTIFICACIÓN:</string>
    <string name="keyA_label">" Llave A (12 valores hexadecimales): "</string>
    <string name="keyB_label">" Llave B (12 valores hexadecimales): "</string>
    <string name="sectorauth_label">" Sector a autentificar (0-15): "</string>
    <string name="sel_llave_label">" Seleccionar Llave: "</string>
    <string name="llaveA">Llave A</string>
    <string name="llaveB">Llave B</string>
    <string name="authenticatebutton">Autentificar Sector</string>
    <string name="read_write_label"> LECTURA/ESCRITURA DE BLOQUES:</string>
    <string name="select_block_label">" Introducir Bloque (0-63): "</string>
    <string name="leer_bloque_button">Leer Bloque (32 Hex)</string>
    <string name="escribir_bloque_button">Escribir Bloque (32 Hex)</string>
    <string name="ready_to_authenticate">Listo para autentificar un sector del tag MIFARE!</string>
    <string name="ready_to_authenticate_instructions">Acerque su dispositivo Android a un tag MIFARE
para autentificar el sector seleccionado con la llave seleccionada.</string>
    <string name="ready_to_write">Listo para escribir a un Bloque del tag MIFARE!</string>
    <string name="ready_to_write_instructions">Acerque su dispositivo Android a un tag MIFARE para
escribir al Bloque seleccionado con la información introducida.</string>
    <string name="ready_to_read">Listo para leer un bloque del tag Mifare!</string>
    <string name="ready_to_read_instructions">Acerque su dispositivo Android a un tag MIFARE para leer
la información del Bloque seleccionado.</string>
</resources>