<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
<<<<<<< HEAD
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

=======
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
>>>>>>> 87f76f9069dd428e4826e65bb0201fbaddff9a61
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/escribirATag_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperaturaMinima_label" />

                <EditText
                    android:id="@+id/temperaturaMinima_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
<<<<<<< HEAD

=======
                <Button
                    android:id="@+id/escribir_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/escribir_label" />
>>>>>>> 87f76f9069dd428e4826e65bb0201fbaddff9a61
            </LinearLayout>

            <Button
                android:id="@+id/autentificar_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Autentificar" />

            <Button
                android:id="@+id/escribir_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Escribir" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperaturaMaxima_label" />

                <EditText
                    android:id="@+id/temperaturaMaxima_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="text" />
            </LinearLayout>

            <Button
                android:id="@+id/autetificar_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Autentificar" />

            <Button
                android:id="@+id/escribir_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Escribir" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humedadMinima_label" />

                <EditText
                    android:id="@+id/humedadMinima_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="text" />
            </LinearLayout>

            <Button
                android:id="@+id/autentificar_button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Autentificar" />

            <Button
                android:id="@+id/escribir_button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Escribir" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humedadMaxima_label" />

                <EditText
                    android:id="@+id/humedadMaxima_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="text" />
            </LinearLayout>

            <Button
                android:id="@+id/autentificar_button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Autentificar" />

            <Button
                android:id="@+id/escribir_button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Escribir" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humedadTierraMinima_label" />

                <EditText
                    android:id="@+id/humedadTierraMinima_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="text" />
            </LinearLayout>

<<<<<<< HEAD
            <Button
                android:id="@+id/autentificar_button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Autentificar" />

            <Button
                android:id="@+id/Escribir_button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />
=======
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
>>>>>>> 87f76f9069dd428e4826e65bb0201fbaddff9a61

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyA_label" />

                <EditText
                    android:id="@+id/editTextKeyA"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyB_label" />

                <EditText
                    android:id="@+id/editTextKeyB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sel_llave_label" />

                <RadioGroup
                    android:id="@+id/rBtnGrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonkeyA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/llaveA" />

                    <RadioButton
                        android:id="@+id/radioButtonkeyB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/llaveB" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>